--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+	compile group: 'javax.xml', name: 'jaxrpc-api', version: '1.1'
+	compile group: 'org.apache.axis', name: 'axis', version: '1.4'
+	compile group: 'commons-discovery', name: 'commons-discovery', version: '0.4'
+	compile group: 'axis', name: 'axis-wsdl4j', version: '1.5.1'
+	
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
